# apache-flink-pratices

./: .dockerignore  .gitignore  Dockerfile.pyflink  Makefile  PROJECT_CONVENTION.md  PYTHON_STYLE_GUIDE.md  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml
docs/: DataStream API 첫걸음.md  fraud_detection_guide.md  overview.md
docs/api docs/: 업비트 API Rate Limits.md  업비트 API 인증 가이드.md  업비트 Private 개별 주문 조회 API.md  업비트 Private 주문 생성 API.md  업비트 REST API 사용 및 에러 안내.md  업비트 WebSocket 사용 및 에러 안내.md  업비트 Websocket 데이터 API.md
docs/project docs/: 1. 데이터 수집 계층 구현 설계 및 체크리스트.md  2. CEP 레이어 구현 설계 및 체크리스트.md  note.md  추후 과제.md  호가창 분석 스캘퍼: 기획.md  호가창 분석 스캘퍼: 시스템 아키텍처.md
examples/: fraud_detection_job.py  stream_source_example.py  upbit_connection_test.py  word_count.py
proto/: common.proto  market_data.proto
scripts/: compile_proto.sh  download-flink.sh  setup.sh  start-flink-local.sh  stop-flink-local.sh  submit-fraud-detection.sh  wait-for-flink.sh
src/data_ingestion/: __init__.py
src/data_ingestion/application/: __init__.py
src/data_ingestion/application/services/: __init__.py  ingestion_service.py
src/data_ingestion/application/use_cases/: __init__.py  stream_market_data.py
src/data_ingestion/domain/: exceptions.py
src/data_ingestion/domain/models/: connection_state.py  exchange_config.py  market_data.py
src/data_ingestion/domain/ports/: exchange_connector.py  message_publisher.py
src/data_ingestion/infrastructure/connectors/: base_websocket.py  upbit_config.py  upbit_connector.py
src/data_ingestion/infrastructure/kafka/: kafka_producer.py
src/data_ingestion/infrastructure/proto_generated/: common_pb2.py  common_pb2.pyi  market_data_pb2.py  market_data_pb2.pyi
src/pyflink_examples/: __init__.py
src/pyflink_examples/fraud_detection/: __init__.py  entities.py  fraud_detector.py  job.py
tests/: __init__.py  test_fraud_detection.py
tests/data_ingestion/application/: __init__.py
tests/data_ingestion/domain/: test_exceptions.py
(+25 files in other folders)
